# adventofcode2020

go/: Makefile  go.mod  main.go
go/cmd/: day01.go  day02.go  day03.go  day04.go  day05.go
go/pkg/day01/: part1.go  part2.go
go/pkg/day02/: part1.go  part2.go
go/pkg/day03/: part1.go  part2.go
go/pkg/day04/: part1.go  part2.go  passport.go
go/pkg/day05/: part1.go  part2.go  shared.go
python/day05/: part1.py  part2.py
python/day06/: part1.py  part2.py
python/day07/: part1.py  part2.py
rust/adventofcode/: Cargo.toml  solution.rs.skel
rust/adventofcode/src/: args.rs  day01.rs  day02.rs  day03.rs  day04.rs  day06.rs  main.rs  point.rs
