[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Bobby R. Ward <bobbyrward@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1"
im = "15"
itertools = "0.9"

[dev-dependencies]
tracing-test = "0.1"
pretty_assertions = "0.6"
